--- a/src/style.css
+++ b/src/style.css
@@ -30,6 +30,7 @@ body {
     width: 200px;
     height: 10px;
     background-color: black;
+    z-index: 1000;
 }
 .n1{ top: 200px}
 .n2{ top: 300px}
@@ -37,5 +38,6 @@ body {
 .n4{ top: 500px}
 
 #wrap{
-    z-index: 1;
+    z-index: 1000;
+    position: absolute;
 }
